# Warp

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  about.toml  build.rs  deny.toml  meson.build  meson_options.txt  warp.doap
.github/workflows/: ci.yml
.gitlab/issue_templates/: Default.md  issue.md
build-aux/: about.toml  app.drey.Warp.Devel.json  app.drey.Warp.Devel.yaml  app.drey.Warp.Devel.yml  app.drey.Warp.yaml  app.drey.Warp.yml  build-help-html.bash  cargo-sources.json  flatpak-build.bash  generate-licenses.bash  generate-manifest.bash  generate-potfile.sh  generate_dev_manifest.bash  generated-sources.json  meson-cargo-manifest.py  net.felinira.warp.Devel.json  net.felinira.warp.Devel.yml  net.felinira.warp.yml  python3-magic-wormhole.json
data/: app.drey.Warp.desktop.in.in  app.drey.Warp.metainfo.xml.in.in  app.drey.Warp.service.in  licenses.json  meson.build  net.felinira.warp.desktop.in.in  net.felinira.warp.gschema.xml.in  net.felinira.warp.metainfo.xml.in.in
data/icons/: meson.build
data/resources/: .gitignore  meson.build  resources.gresource.xml  shortcuts-dialog.ui  style.css
data/resources/ui/: action_view.ui  help_overlay.ui  preferences.ui  welcome_window.ui  window.ui
help/: LINGUAS  meson.build
help/C/: details-commandline.page  details-glossary.page  details-qr.page  general-intro.page  index.page
help/C/duck/: details-commandline.duck  details-glossary.duck  details-qr.duck  general-intro.duck  index.duck
help/bg/: bg.po
help/de/: de.po  de.po~
help/es/: es.po
help/eu/: eu.po
help/hu/: hu.po
help/nl/: nl.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sl/: sl.po
help/sv/: sv.po
help/uk/: uk.po
hooks/: pre-commit.hook
po/: LINGUAS  POTFILES.in  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  ie.po  is.po  it.po  ka.po  ko.po  meson.build  nb.po  nl.po  oc.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  uz.po  (+4 more)
src/: action_view.rs  application.rs  config.rs  gettext.rs  globals.rs  macros.rs  main.rs  meson.build  service.rs  ui.rs  util.rs  window.rs  wormhole.rs
src/gettext/: duration.rs
src/service/: twisted.rs  util.rs  wormhole.rs
src/ui/: action_view.rs  action_view.ui  application.rs  camera.rs  camera.ui  camera_row.rs  fs.rs  licenses.rs  preferences.rs  preferences.ui  pride.rs  progress.rs  util.rs  welcome_dialog.rs  welcome_dialog.ui  welcome_window.rs  welcome_window.ui  window.rs  window.ui
src/ui/window/: actions.rs
src/util/: error.rs  future.rs  zip.rs
