[package]
name = "warp"
license = "GPL-3.0"
version = "0.9.2"
authors = ["Fina Wilke <finaw@gnome.org>"]
homepage = "https://apps.gnome.org/Warp/"
repository = "https://gitlab.gnome.org/World/warp/"
edition = "2024"
default-run = "warp"
rust-version = "1.85"

[package.metadata.urls]
issuetracker = "https://gitlab.gnome.org/World/warp/issues"
contact = "https://matrix.to/#/#warp:gnome.org"

[profile.release]
lto = true
codegen-units = 1
strip = false

[dependencies]
gtk = { version = "0.10", package = "gtk4", features = [
    "xml_validation",
    "v4_14",
] }
gdk = { version = "0.10", package = "gdk4", features = ["v4_14"] }
gio = { version = "0.21", package = "gio", features = ["v2_76"] }
adw = { version = "0.8", package = "libadwaita", features = ["v1_7"] }
glib = "0.21"
log = "0.4"
pretty_env_logger = "0.5"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
async-channel = "2"
wormhole = { package = "magic-wormhole", version = "0.7", features = [
    "entropy",
] }
futures = "0.3"
url = "2.2"
urlencoding = "2.1"
smol = "2.0"
scopeguard = "1.1"
serde = "1.0"
serde_json = "1.0"
simple_moving_average = "1.0"
chrono = "0.4"
regex = "1"
gvdb = { version = "0.9", features = ["gresource"] }
gvdb-macros = { version = "0.1" }
thiserror = "2"
tempfile = "3.4.0"
backtrace = "0.3"
qrcode = "0.14"
zbus = "5"
async-broadcast = "0.7"
async_zip = "0.0.17"
memmap2 = "0.9"
aperture = { version = "0.11", optional = true }
license = { version = "3", features = ["offline"] }
strum = { version = "0.27", features = ["derive", "strum_macros"] }

[target.'cfg(unix)'.dependencies]
ashpd = { version = "0.11", features = [
    "gtk4",
    "async-std",
], default-features = false }

[target.'cfg(windows)'.dependencies]
win32console = "0.1"

[features]
default = ["qr_code_scanning"]
demo = []
meson = []
qr_code_scanning = ["dep:aperture"]

[patch.crates-io]
ashpd = { git = "https://github.com/bilelmoussaoui/ashpd" }
