i18n.gettext(
    gettext_package,
    preset: 'glib',
    args: [
        '--add-comments',
        '--from-code=utf-8',
        '--keyword=pgettextf:1c,2',
        '--keyword=npgettextf:1c,2,3',
        '--keyword=gettextf',
        '--keyword=ngettextf:1,2',
        '--keyword=ngettextf_:1,2'
    ]
)
